--- a/glossary.tex
+++ b/glossary.tex
@@ -1,6 +1,6 @@
 \chapter*{List of Acronyms}
 %\thispagestyle{simple} % formatting the first page of each chapter
-\thispagestyle{mystyle_acronyms_1}
+%\thispagestyle{mystyle_acronyms_1}
 \addcontentsline{toc}{chapter}{List of Acronyms}
 
 %\vspace{0.5cm}
