--- a/references.bib
+++ b/references.bib
@@ -1684,7 +1684,7 @@ author = {N.G. {Van Kampen}}}
 @misc{sps_headtail_monitor,
   title = {SPS Head-Tail Monitor},
   author = {Kevin Shing Bruce Li},
-  url  =  {https://indico.cern.ch/event/931117/contributions/3913554/attachments/2096199/3523367/014_HeadtailMonitor.pdff},
+  url  =  {https://indico.cern.ch/event/931117/contributions/3913554/attachments/2096199/3523367/014_HeadtailMonitor.pdf},
   note = {Accessed: 27-09-2022},
 }
 
@@ -1717,3 +1717,8 @@ author = {N.G. {Van Kampen}}}
       doi           = "10.1103/PhysRevAccelBeams.23.021002",
 }
 
+@misc{rms_std,
+  title = {Weisstein, Eric W. "Root-Mean-Square." From MathWorld--A Wolfram Web Resource},
+  url  =  {https://mathworld.wolfram.com/Root-Mean-Square.html},
+  note = {Accessed: 31-10-2022},
+}
