--- a/appendix/appendix.tex
+++ b/appendix/appendix.tex
@@ -35,7 +35,7 @@ In the classical definition in mathematics, the root mean square (rms) is an alt
 %\item \textbf{Disclaimer:} It is common in physics and in sciences in general for the term rms to correspond to what is actually defined as standard deviation (see definition in Appendix~\ref{app:meas_spread}). This convention, is also followed in this thesis.
 %\end{itemize}
 
-Often in physics and engineering the term rms is used as a synonym for the standard deviation when one refers to the rms from a given baseline~\cite{rms_std}.
+Often in physics and engineering, the term rms is used as a synonym for the standard deviation when one refers to the rms from a given baseline~\cite{rms_std}.
 % source: https://mathworld.wolfram.com/Root-Mean-Square.html
 
 
