--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -7,3 +7,5 @@
 % put your text here
 
 %From Xavier's thesis: The CERN organisation deserves acknowledgement for financing this study and providing resources including, of course, beam time for experimental studies.
+
+With the folllowing lines I would like to thank all the people who have helped me undertake this long, exciting and challenging journey.
