--- a/main.tex
+++ b/main.tex
@@ -104,6 +104,8 @@
 
 \frontmatter
 %Aknowledgments
+\input{head/declaration}
+
 \input{head/acknowledgments}
 % Abstract
 \input{head/abstract}
@@ -128,7 +130,6 @@
 \newpage
 
 \input{symbols.tex}
-
 %\addtocontents{toc}{\protect\thispagestyle{empty}}
 \printnomenclature
 \addcontentsline{toc}{chapter}{List of symbols}
