--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -8,4 +8,25 @@
 
 %From Xavier's thesis: The CERN organisation deserves acknowledgement for financing this study and providing resources including, of course, beam time for experimental studies.
 
-With the folllowing lines I would like to thank all the people who have helped me undertake this long, exciting and challenging journey.
+
+% put your text here
+With the following lines, I would like to thank all the people who have helped me undertake this challenging but exciting journey.
+
+In particular, this work would not have been possible without the guidance of my supervisor at CERN, Dr. Hannes Bartosik. I would like to thank him for his support over the past four years and the numerous hours of valuable and interesting discussions. I am grateful to have had a supervisor that willing to share his immense knowledge in the field. I have learned a lot from him and he played a crucial role in my professional development. 
+
+I am sincerely thankful to my university supervisor, Prof.~Andrzej Wolski, for being an excellent teacher, for the numerous fruitful discussions, and his valuable feedback. His interest in the work and his inputs on the topic were always beneficial. I would furthermore like to thank him for being regularly involved in the work and for his careful guidance through every step of this PhD project. 
+
+I would also like to thank Dr.~Yannis Papaphilippou and Dr.~Fanouria Antoniou for introducing me to the field of accelerator physics, for their valuable suggestions, and for their support in every way. I am also grateful to Dr.~Sofia Kostoglou for her incredible assistance in the first stages of my work.
+
+Special thanks to Dr.~Xavier Buffat for his amazing ideas, help, and contribution to understanding the mechanism of the emittance growth suppression by the impedance. I am grateful for all the discussions and our collaboration over the past two years. 
+
+I would also like to thank Rama Calaga, Philippe Baudrenghien, and Themistoklis Mastoridis for their contribution to the studies and the excellent collaboration with the SY-RF team for the realisation of the SPS experiments with Crab Cavities.
+
+I would like to thank Tom Levens and Niky Bruchon for the Head-Tail monitor and bunch length measurements respectively, during the SPS Crab Cavity tests. I am also grateful to Lee Carver for transferring his knowledge from the first experimental campaign with Crab Cavities in 2018.
+
+I had the pleasure to share my PhD journey with Michalis, Kostas, and Tirsi. Many thanks for all the coffee breaks, the discussions, and the memories inside and outside of work. I would also like to thank Kacper and Konstantina for their unconditional understanding during the last few monthts. 
+
+I would like to thank my parents, Vangelis and Stavroula, and my brothers Giwrgos and Thanasis for their support and love, and for being there my entire life. 
+
+
+Finally, I am deeply grateful to Maria, for joining me on this journey, for her constant support and patience, and for giving me confidence during the most difficult times. Thanks for being there, and for helping me keep my focus on the real values of life.
