--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -309,7 +309,7 @@ In this section, the individual emittance growth measurements for each coast fro
   \end{figure}
  
  
- The average measured bunch length over all above coasts on May 16, 2022 (Experiments I and II) was found to be, 4$\sigma_t$=1.83\,ns. 
+ The average measured bunch length over all above coasts on May 16, 2022 (Experiments I and II) was found to be 4$\sigma_t$=1.83\,ns. 
  
  \newpage
  
@@ -355,7 +355,7 @@ In this section, the individual emittance growth measurements for each coast fro
  \end{figure}
 
 
-The average measured bunch length over all above coasts in 2022, was found to be, 4$\sigma_t$=1.77\,ns. 
+The average measured bunch length over all above coasts in 2022, was found to be 4$\sigma_t$=1.77\,ns. 
 
 
 
@@ -372,7 +372,7 @@ The average measured bunch length over all above coasts in 2022, was found to be
  
 
 
-The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.75\,ns. 
+The average measured bunch length over the coast was found to be 4$\sigma_t$=1.75\,ns. 
 
 
 \newpage
@@ -507,4 +507,4 @@ The average measured bunch length over the coast was found to be, 4$\sigma_t$=1.
  
 
 
-The average intensity over the coast was found to be, 2.4$\times 10^{10}$ protons per bunch. 
+The average intensity over the coast was found to be 2.4$\times 10^{10}$ protons per bunch. 
