--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -24,7 +24,7 @@ I would also like to thank Rama Calaga, Philippe Baudrenghien, and Themistoklis 
 
 I would like to thank Tom Levens and Niky Bruchon for the Head-Tail monitor and bunch length measurements respectively, during the SPS Crab Cavity tests. I am also grateful to Lee Carver for transferring his knowledge from the first experimental campaign with Crab Cavities in 2018.
 
-I had the pleasure to share my PhD journey with Michalis, Kostas, and Tirsi. Many thanks for all the coffee breaks, the discussions, and the memories inside and outside of work. I would also like to thank Kacper and Konstantina for their unconditional understanding during the last few monthts. 
+I had the pleasure to share my PhD journey with Michalis, Kostas, and Tirsi. Many thanks for all the coffee breaks, the discussions, and the memories inside and outside of work. I would also like to thank Alina, Kacper, and Konstantina for their unconditional understanding during the last few monthts. 
 
 I would like to thank my parents, Vangelis and Stavroula, and my brothers Giwrgos and Thanasis for their support and love, and for being there my entire life. 
 
