--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -393,7 +393,7 @@ In detail, the steps are as follows:
 
     It is clear that $\fourierxform{\phi}_n(f_k)$ has both positive and negative frequencies and the magnitude is symmetric in $f_k$.
     
-    \item Finally, apply the inverse Fourier transform, Eq.~(\ref{eq:iDFT_definiton}), to $\fourierxform{\phi}_n(f_k)$. The  output is a  random  discrete  time  series, $\phi(n\Delta t)$ of $N$ values sampled every $\Delta t = 1/f_s=1/f_\mathrm{rev}$. 
+    \item Finally, apply the inverse Fourier transform, Eq.~(\ref{eq:iDFT_definiton}), to $\fourierxform{\phi}_n(f_k)$. The output is a random discrete time series, $\phi(n\Delta t)$ of $N$ values sampled every $\Delta t = 1/f_s=1/f_\mathrm{rev}$. 
     
     \item The generated sequence of noise kicks, $\phi_n$, that corresponds to the measured noise spectrum can be applied in the tracking simulations following the usual modeling described in Eq.~\eqref{eq:phase_noise_kick}. Now the parameter $\Delta \phi_j$ is the $j^\mathrm{th}$ element of the $\phi_n$ sequence, where $j=\{0...,N_\mathrm{turns}\}$ denotes the turn number of the simulation with $N_\mathrm{turns}$ being the total number of turns.
     
@@ -413,7 +413,7 @@ In detail, the steps are as follows:
     \begin{subfigure}[t]{0.42\textwidth}
         \centering
         \includegraphics[width=1 \textwidth]{./images/app_B/coast1_setting2_v2.png}
-        \caption{Measured phase noise spectrum in  units rad$^2$/Hz.}
+        \caption{Measured phase noise spectrum in units rad$^2$/Hz.}
         \label{fig:coast1_setting2_b}
     \end{subfigure}
     \hfill
@@ -468,9 +468,9 @@ Figure \ref{fig:generate_noise_kicks_sanity_check_1} shows the results of the fi
 \end{figure} 
 
 \subsubsection*{PyHEADTAIL simulations} %\hfill \break
-Another way to validate the method for producing a sequence of noise kicks from a measured power spectrum is to perform numerical simulations using the generated noise kicks, and compare the resulting emittance growth with the predictions form an analytical model~\cite{PhysRevSTAB.18.101001}.
+Another way to validate the method for producing a sequence of noise kicks from a measured power spectrum is to perform numerical simulations using the generated noise kicks, and compare the resulting emittance growth with the predictions from an analytical model~\cite{PhysRevSTAB.18.101001}.
 
-In the simulations, which were performed with PyHEADTAIL, the beam was tracked for $10^5$ turns which corresponds to about 2.5\,s in the SPS. A kick representing the effect of the crab cavities was applied on each turn following Eq.~\eqref{eq:phase_noise_kick}. The noise kicks that the beam encounters every turn at the CC location were generated from the phase and amplitude noise spectra of from Coast1-Setting2 of 2018 (Fig.~\ref{fig:example_PN_and_AN_coast1_setting2}). 
+In the simulations, which were performed with PyHEADTAIL, the beam was tracked for $10^5$ turns which correspond to about 2.5\,s in the SPS. A kick representing the effect of the crab cavities was applied on each turn following Eq.~\eqref{eq:phase_noise_kick}. The noise kicks that the beam encounters every turn at the CC location were generated from the phase and amplitude noise spectra of Coast1-Setting2 of 2018 (Fig.~\ref{fig:example_PN_and_AN_coast1_setting2}). 
 
 It should be noted, however, that the sequence of noise kicks includes a random factor through the set of random phases $\theta(f_k)$. To reduce the uncertainty in the results, multiple simulation runs were conducted. The set of random phases was regenerated randomly for each of 10 runs with a different seed each time. For each run, the initial bunch distribution was also regenerated randomly 3 times. The mean and the standard deviation of the emittance values obtained from the tracking were computed over all runs. The emittance growth rate was computed by performing a linear fit to the mean of the emittance values.
 
