add after minor corrections

--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -16,6 +16,8 @@ In particular, this work would not have been possible without the guidance of my
 
 I am sincerely thankful to my university supervisor, Prof.~Andrzej Wolski, for being an excellent teacher, for the numerous fruitful discussions, and his valuable feedback. His interest in the work and his inputs on the topic were always beneficial. I would furthermore like to thank him for being regularly involved in the work and for his careful guidance through every step of this PhD project. 
 
+I would like to express my appriciation to my viva examiners, Prof.~Andrew Mehta and Prof.~Robert Appleby, for their valuable feedback and comments.
+
 I would also like to thank Dr.~Yannis Papaphilippou and Dr.~Fanouria Antoniou for introducing me to the field of accelerator physics, for their valuable suggestions, and for their support in every way. I am also grateful to Dr.~Sofia Kostoglou for her incredible assistance in the first stages of my work.
 
 Special thanks to Dr.~Xavier Buffat for his amazing ideas, help, and contribution to understanding the mechanism of the emittance growth suppression by the impedance. I am grateful for all the discussions and our collaboration over the past two years. 
@@ -26,7 +28,6 @@ I would like to thank Tom Levens and Niky Bruchon for the Head-Tail monitor and 
 
 I had the pleasure to share my PhD journey with Michalis, Kostas, and Tirsi. Many thanks for all the coffee breaks, the discussions, and the memories inside and outside of work. I would also like to thank Alina, Kacper, and Konstantina for their unconditional understanding during the last few monthts. 
 
-I would like to thank my parents, Vangelis and Stavroula, and my brothers Giwrgos and Thanasis for their support and love, and for being there my entire life. 
+I would like to thank my family, and especially my parents, Vangelis and Stavroula, for their support and love.
 
-
-Finally, I am deeply grateful to Maria, for joining me on this journey, for her constant support and patience, and for giving me confidence during the most difficult times. Thanks for being there, and for helping me keep my focus on the real values of life.
+Finally, I am deeply grateful to Maria, for joining me on this journey, for her constant support and patience, and for giving me confidence during the most difficult times. %Thanks for being there, and for helping me keep my focus on the real values of life.
