--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -16,7 +16,7 @@ In particular, this work would not have been possible without the guidance of my
 
 I am sincerely thankful to my university supervisor, Prof.~Andrzej Wolski, for being an excellent teacher, for the numerous fruitful discussions, and his valuable feedback. His interest in the work and his inputs on the topic were always beneficial. I would furthermore like to thank him for being regularly involved in the work and for his careful guidance through every step of this PhD project. 
 
-I would like to express my appriciation to my viva examiners, Prof.~Andrew Mehta and Prof.~Robert Appleby, for their valuable feedback and comments.
+I would like to express my appreciation to my viva examiners, Prof.~Andrew Mehta and Prof.~Robert Appleby, for their valuable feedback and comments.
 
 I would also like to thank Dr.~Yannis Papaphilippou and Dr.~Fanouria Antoniou for introducing me to the field of accelerator physics, for their valuable suggestions, and for their support in every way. I am also grateful to Dr.~Sofia Kostoglou for her incredible assistance in the first stages of my work.
 
