--- a/head/acknowledgments.tex
+++ b/head/acknowledgments.tex
@@ -12,19 +12,21 @@
 % put your text here
 With the following lines, I would like to thank all the people who have helped me undertake this challenging but exciting journey.
 
-In particular, this work would not have been possible without the guidance of my supervisor at CERN, Dr. Hannes Bartosik. I would like to thank him for his support over the past four years and the numerous hours of valuable and interesting discussions. I am grateful to have had a supervisor that willing to share his immense knowledge in the field.
+In particular, this work would not have been possible without the guidance of my supervisor at CERN, Dr. Hannes Bartosik. I would like to thank him for sharing his immense knowledge in the field with me, and for the numerous hours of valuable and interesting discussions.
+
+%for his support over the past four years and the numerous hours of valuable and interesting discussions. %I am grateful to have had a supervisor that willing to share his immense knowledge in the field.
 
 I am sincerely thankful to my university supervisor, Prof.~Andrzej Wolski, for being an excellent teacher, for the numerous fruitful discussions, and his valuable feedback. His interest in the work and his inputs on the topic were always beneficial. I would furthermore like to thank him for his careful guidance through every step of this PhD project. 
 
 I would like to express my appreciation to my viva examiners, Prof.~Andrew Mehta and Prof.~Robert Appleby, for their valuable feedback and comments.
 
-I would also like to thank Dr.~Yannis Papaphilippou and Dr.~Fanouria Antoniou for welcoming me into the field of accelerator physics, for their valuable suggestions, and for their support.
+I would also like to thank Dr.~Yannis Papaphilippou and Dr.~Fanouria Antoniou for welcoming me into the field of accelerator physics and for their valuable suggestions for the project.
 
 Special thanks to Dr.~Xavier Buffat for his amazing ideas, help, and contribution to understanding the mechanism of the emittance growth suppression by the impedance. I am grateful for all the discussions and our collaboration over the past two years. 
 
 I would also like to thank Rama Calaga and Philippe Baudrenghien for the realisation of the SPS experiments with Crab Cavities and for an excellent collaboration with the SY-RF team. I am also grateful to Lee Carver for transferring his knowledge from the first experimental campaign with Crab Cavities in 2018.
 
-%I would like to thank Tom Levens and Niky Bruchon for the Head-Tail monitor and bunch length measurements respectively, during the SPS Crab Cavity tests. I am also grateful to Lee Carver for transferring his knowledge from the first experimental campaign with Crab Cavities in 2018.
+I would like to thank Tom Levens and Niky Bruchon for the help with the Head-Tail monitor and bunch length measurements respectively, during the SPS Crab Cavity tests. I am also grateful to Lee Carver for transferring his knowledge from the first experimental campaign with Crab Cavities in 2018.
 
 I had the pleasure to share my PhD journey with Kostas, Michalis, Sofia, and Tirsi. Many thanks for all the coffee breaks, the discussions, and the memories inside and outside of work. I would also like to thank Alina, Kacper, and Konstantina for their unconditional understanding during the last few monthts. 
 
